--- a/pom.xml
+++ b/pom.xml
@@ -21,19 +21,7 @@
 	<modules>
 		<module>iot-telemetry-feed</module>
 		<module>iot-telemetry-stream</module>
-	</modules>
-
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+        <module>cab-location-service</module>
+    </modules>
 
 </project>
