--- a/cab-location-service/pom.xml
+++ b/cab-location-service/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.telemetry.info</groupId>
-		<artifactId>iot-telemetry</artifactId>
+		<artifactId>cab-telemetry</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
